<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:src="@drawable/back2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
>

            <Button
                style="@style/ButtonStyle"
                android:id="@+id/scan"
                android:background="@drawable/button_border"
                android:text="@string/unlock"
                android:onClick="openScanner"/>

            <ImageView
                android:id="@+id/finger_logo"
                android:layout_above="@+id/scan"
                android:layout_centerHorizontal="true"
                style="@style/ImageViewStyle"
                android:src="@drawable/finger_print" />

            <Button
                style="@style/ButtonStyle"
                android:background="@drawable/button_border"
                android:text="@string/info_button"
                android:id="@+id/info_button"
                android:onClick="openInformation"/>

            <ImageView
                android:id="@+id/questions_logo"
                android:layout_above="@+id/info_button"
                android:layout_centerHorizontal="true"
                style="@style/ImageViewStyle"
                android:src="@drawable/questions" />


            <Button
                android:id="@+id/exit"
                style="@style/ButtonStyle"
                android:background="@drawable/button_border"
                android:onClick="Exit"
                android:text="@string/exit" />



        </LinearLayout>

    </ScrollView>

</RelativeLayout>
