<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenScanner">

    <ImageView
        android:src="@drawable/back2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/buttonScanner"
                style="@style/ButtonStyle"
                android:text="@string/scan_finger"
                android:background="@drawable/button_border"
                android:onClick="scanCode"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <ImageView
                android:id="@+id/fingerprint_logo"
                android:layout_above="@+id/buttonScanner"
                android:layout_centerHorizontal="true"
                style="@style/ImageViewStyle"
                android:src="@drawable/linie_papilarne" />

            <Button
                android:id="@+id/buttonLearnAboutScanner"
                style="@style/ButtonStyle"
                android:text="@string/learnMore"
                android:background="@drawable/button_border"
                android:onClick="learnAboutScanning"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                />

            <ImageView
                android:id="@+id/questionMark"
                android:layout_above="@+id/buttonLearnAboutScanner"
                android:layout_centerHorizontal="true"
                style="@style/ImageViewStyle"
                android:src="@drawable/pytajnik" />

            <Button
                android:id="@+id/buttonBack"
                style="@style/ButtonStyle"
                android:background="@drawable/button_border"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_width="match_parent"
                android:onClick="Back"
/>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>
